Imagem de fundo adicionada

--- a/arquivos/android.css
+++ b/arquivos/android.css
@@ -25,6 +25,9 @@
 
 body {
     background-color: #9eebc1;
+    background-image: url(imagens/imagens/android\ wallpaper.png);
+    background-size: cover;
+    background-attachment: fixed;
     font-family: var(--fonte-padrao);
     text-align: justify;
 }
